# rust-svelte-blog

backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: article.rs
backend/src/models/: article.rs  mod.rs
backend/src/routes/: articles.rs
frontend/: package.json
frontend/src/apis/articles/: articles.api.ts  index.ts
frontend/src/apis/common/: custom.api.ts  index.ts
frontend/src/apis/common/responses/: index.ts  list.response.ts
frontend/src/models/: article.model.ts  index.ts
frontend/src/routes/articles/: +page.svelte  +page.ts
